# SilverLink

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  call_history.txt  check_memory.py  insert_dummy_data.py  integration_test.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pythonToJava.py  requirements.txt  technical_resolution.md  test_sqs_integration.py  vite.config.ts
.github/: GIT_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  improvement.yml  question.yml
.github/workflows/: build.yml  ci.yml
app/: main.py  websoket_twilio.py
app/core/: config.py  container.py  middleware.py
app/integration/: call.py
app/queue/: dlq_handler.py  message_schema.py  sqs_client.py  worker.py
app/util/: http_client.py  log.py
apps/ai/: pyproject.toml
apps/frontend/: .env.example  index.html
chatbot-backend/: requirements.txt
mem_db/: meta.json
src/: App.tsx  index.css
src/api/: accessRequests.ts  admins.ts  auth.ts  callReviews.ts  chatbot.ts  elderly.ts  emergencyAlerts.ts  guardians.ts  index.ts  map.ts  notices.ts  notifications.ts  ocr.ts  passkey.ts  phoneVerification.ts  users.ts  welfare.ts
src/app/: main.py
src/config/: adminNavItems.tsx  counselorNavItems.tsx  guardianNavItems.tsx
src/contexts/: AuthContext.tsx  DuplicateLoginContext.tsx
src/hooks/: useWebAuthn.ts
src/pages/: Index.tsx  Login.tsx
src/types/: api.ts
tests/: conftest.py  integration_test.py
tests/integration/: test_authentication.py  (+6 more)
(+127 files in other folders)
