[project]
name = "app"
version = "0.1.0"
description = "LLM 기반 콜봇·챗봇 통합 지능형 상담 AI 시스템 API"
authors = [
    {name = "SeongHo Kim",email = "kkb053404@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
